# gedim

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  OLD_CMakeLists.txt  README.md  external_dependencies.sh  mainUnitTests.cpp
3rd_party_libraries/: CMakeLists.txt  SuiteSparseConfig.cmake
3rd_party_libraries/cmake/: InstallEigen3.cmake  InstallGTest.cmake  InstallLapack.cmake  InstallMetis.cmake  InstallTetgen.cmake  InstallTriangle.cmake  InstallVTK.cmake  InstallVoro.cmake
GeDiM/: CMakeLists.txt
GeDiM/cmake/: GeDiMConfig.cmake.in
GeDiM/src/: CMakeLists.txt
GeDiM/src/Algebra/: CMakeLists.txt  Eigen_Array.cpp  Eigen_Array.hpp  Eigen_BiCGSTABSolver.cpp  Eigen_BiCGSTABSolver.hpp  Eigen_CholeskySolver.cpp  Eigen_CholeskySolver.hpp  Eigen_LUSolver.cpp  Eigen_LUSolver.hpp  Eigen_PCGSolver.cpp  Eigen_PCGSolver.hpp  Eigen_SparseArray.cpp  Eigen_SparseArray.hpp  Eigen_Utilities.cpp  Eigen_Utilities.hpp  IArray.hpp  ILinearSolver.hpp  ISparseArray.hpp  LAPACK_utilities.cpp  LAPACK_utilities.hpp  PETSc_Array.cpp  PETSc_Array.hpp  PETSc_KSPSolver.cpp  PETSc_KSPSolver.hpp  PETSc_SparseArray.cpp  PETSc_SparseArray.hpp  Pardiso_CholeskySolver.cpp  Pardiso_CholeskySolver.hpp  Pardiso_LUSolver.cpp  Pardiso_LUSolver.hpp  SuiteSparse_Utilities.cpp  SuiteSparse_Utilities.hpp
GeDiM/src/Common/: CMakeLists.txt  CommonUtilities.cpp  CommonUtilities.hpp  Gedim_Macro.in  Macro.hpp.in
GeDiM/src/Geometry/: CMakeLists.txt  GeometryUtilities.cpp  GeometryUtilities.hpp  GeometryUtilities_Intersection.cpp  GeometryUtilities_Point.cpp  GeometryUtilities_Polygon.cpp  GeometryUtilities_Polyhedron.cpp  GeometryUtilities_Split.cpp  GeometryUtilities_SplitPolyhedron.cpp  MapHexahedron.cpp  MapHexahedron.hpp  MapQuadrilateral.cpp  MapQuadrilateral.hpp  MapTetrahedron.cpp  MapTetrahedron.hpp  MapTriangle.cpp  MapTriangle.hpp
GeDiM/src/IO/: CMakeLists.txt  ConfigurationPropertySupportedTypes.hpp  Configurations.cpp  Configurations.hpp  FileTextReader.cpp  FileTextReader.hpp  IFileTextReader.hpp  IOUtilities.cpp  IOUtilities.hpp  ImportExportUtilities.hpp  StringsUtilities.cpp  StringsUtilities.hpp  TimeUtilities.hpp  UCDUtilities.cpp  UCDUtilities.hpp  VTKUtilities.cpp  VTKUtilities.hpp  VTPExtension.cpp  VTPExtension.hpp  VTPUtilities.cpp  VTPUtilities.hpp
GeDiM/src/Mesh/: CMakeLists.txt  ConformMeshUtilities.cpp  ConformMeshUtilities.hpp  ConformerMeshPolygon.cpp  ConformerMeshPolygon.hpp  ConformerMeshSegment.cpp  ConformerMeshSegment.hpp  IMeshDAO.hpp  IntersectorMesh2DSegment.cpp  IntersectorMesh2DSegment.hpp  IntersectorMesh3DSegment.cpp  IntersectorMesh3DSegment.hpp  MeshDAOExporterToCsv.cpp  MeshDAOExporterToCsv.hpp  MeshDAOImporterFromCsv.cpp  MeshDAOImporterFromCsv.hpp  MeshFromCsvUtilities.cpp  MeshFromCsvUtilities.hpp  MeshMatrices.hpp  MeshMatricesDAO.cpp  MeshMatricesDAO.hpp  MeshUtilities.cpp  MeshUtilities.hpp  MeshUtilities1D.cpp  MeshUtilities2D.cpp  MeshUtilities3D.cpp  MeshUtilities_Intersect_mesh_polyhedron.cpp  MeshUtilities_MeshGenerators.cpp  ObjectFileFormatInterface.cpp  ObjectFileFormatInterface.hpp  OpenVolumeMeshInterface.cpp  OpenVolumeMeshInterface.hpp  PlatonicSolid.cpp  PlatonicSolid.hpp  RefinementUtilities.cpp  RefinementUtilities.hpp  RefinementUtilities2D.cpp  RefinementUtilities3D.cpp  SphereMeshUtilities.hpp  TetgenInterface.cpp  (+9 more)
GeDiM/src/MpiTools/: CMakeLists.txt  GraphUtilities.cpp  GraphUtilities.hpp  IMpiProcess.hpp  MetisUtilities.cpp  MetisUtilities.hpp  MpiParallelEnvironment.cpp  MpiParallelEnvironment.hpp  MpiProcess.cpp  MpiProcess.hpp
GeDiM/src/Quadrature/: CMakeLists.txt  QuadratureData.hpp  Quadrature_Gauss1D.hpp  Quadrature_Gauss2D_Square.cpp  Quadrature_Gauss2D_Square.hpp  Quadrature_Gauss2D_Triangle.cpp  Quadrature_Gauss2D_Triangle.hpp  Quadrature_Gauss3D_Hexahedron.cpp  Quadrature_Gauss3D_Hexahedron.hpp  Quadrature_Gauss3D_Tetrahedron.cpp  Quadrature_Gauss3D_Tetrahedron.hpp  Quadrature_Gauss3D_Tetrahedron_PositiveWeights.cpp  Quadrature_Gauss3D_Tetrahedron_PositiveWeights.hpp  Quadrature_GaussLobatto1D.hpp
GeDiM/test/: CMakeLists.txt  OLD_CMakeLists.txt  main.cpp
GeDiM/test/Algebra/: CMakeLists.txt  test_Eigen.hpp  test_LAPACK_utilities.hpp  test_PETSc.hpp  test_Pardiso.hpp
GeDiM/test/Geometry/: CMakeLists.txt  test_geometry.hpp  test_geometry_intersection.hpp  test_geometry_point.hpp  test_geometry_polygon.hpp  test_geometry_polyhedron.hpp  test_geometry_segment.hpp  test_geometry_split.hpp  test_geometry_splitPolyhedron.hpp  test_map.hpp
GeDiM/test/IO/: CMakeLists.txt  test_CommonUtilities.hpp  test_Configurations.hpp  test_StringsUtilities.hpp  test_UCDUtilities.hpp  test_VTKUtilities.hpp  test_VTPUtilities.hpp
GeDiM/test/Mesh/: CMakeLists.txt  MashMatrices_2D_CleanTest_Mock.hpp  MeshMatrices_2D_1Cells_Mock.hpp  MeshMatrices_2D_26Cells_Mock.hpp  MeshMatrices_2D_2Cells_Mock.hpp  (+26 more)
src/: CMakeLists.txt
src/Common/: CMakeLists.txt  MacroDefinitions.hpp.in  Utilities.cpp  Utilities.hpp
src/Geometry/: CMakeLists.txt  GeometryUtilities.cpp  GeometryUtilities.hpp  GeometryUtilities_Intersection.cpp  GeometryUtilities_Point.cpp  GeometryUtilities_Polygon.cpp  GeometryUtilities_Polyhedron.cpp  GeometryUtilities_Split.cpp  MapQuadrilateral.cpp  MapQuadrilateral.hpp  MapTriangle.hpp
src/IO/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  FileTextReader.hpp  IFileReader.hpp  IFileTextReader.hpp  IOUtilities.hpp  Output.cpp  Output.hpp
src/Mesh/: CMakeLists.txt  ConformerMeshPolygon.cpp  ConformerMeshPolygon.hpp  ConformerMeshSegment.cpp  ConformerMeshSegment.hpp  IMeshDAO.hpp  IntersectorMesh2DSegment.cpp  IntersectorMesh2DSegment.hpp  MeshDAOExporterToCsv.cpp  MeshDAOExporterToCsv.hpp  MeshDAOImporter2DFromCsv.cpp  MeshDAOImporter2DFromCsv.hpp  MeshDAOImporterFromCsv.cpp  MeshDAOImporterFromCsv.hpp  MeshFromCsvUtilities.cpp  MeshFromCsvUtilities.hpp  MeshMatrices.hpp  MeshMatricesDAO.cpp  MeshMatricesDAO.hpp  MeshUtilities.cpp  MeshUtilities.hpp  UnionMeshSegment.cpp  UnionMeshSegment.hpp
src/MpiTools/: CMakeLists.txt  IMpiProcess.hpp  MpiParallelEnvironment.cpp  MpiParallelEnvironment.hpp  MpiProcess.cpp  MpiProcess.hpp
(+33 files in other folders)
